Set up the carousel to rotate every 3 seconds, fix bug with z-index for auth dropdown

--- a/public/stylesheets/navigation/navbar.scss
+++ b/public/stylesheets/navigation/navbar.scss
@@ -44,6 +44,7 @@
     right: 0;
     height: 100%;
     width: 150px;
+    z-index: 4;
   }
 }
 
@@ -101,7 +102,6 @@
   /*border: 1px solid lightgrey;*/
 
   div {
-    width: 100px;
     padding: 0.7em 1em 0.7em 1em;
     font-size: 0.85em;
 
